feat: api 중복 제거