@@ -75,7 +75,7 @@ class DocumentSearchServiceTest {
         // then
         assertSoftly(softly -> {
             softly.assertThat(result).hasSize(2);
-            softly.assertThat(result.getFirst().getDocumentType()).isEqualTo(DocumentType.CREW);
+            softly.assertThat(result.get(0).getDocumentType()).isEqualTo(DocumentType.CREW);
             softly.assertThat(result.get(1).getDocumentType()).isEqualTo(DocumentType.ORGANIZATION);
         });
     }
